<resources>
    <string name="app_name">DentaCare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password_length">Password too short, enter minimum 6 characters!</string>
    <string name="authentication_failed">Authentication failed, check your email and password</string>
    <string name="title_activity_led_control">ledControl</string>
    <!--<string name="change_email">Change Email</string>-->
    <!--<string name="change_password">Change Password</string>-->
    <string name="send_password_reset_email">Send Password reset email</string>
    <!--<string name="remove_user">Remove user</string>-->
    <!--<string name="new_pass">New Password</string>-->
    <string name="title_activity_profile">DentaCare</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Username</string>
    <string name="hint_deviceid">DeviceID</string>
    <string name="hint_address">Address</string>
    <string name="hint_password">Password</string>
    <!--<string name="hint_name">Fullname</string>-->
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <!--<string name="hint_new_email">New Email</string>-->
    <!--<string name="btn_change">Change</string>-->
    <!--<string name="btn_send">Send</string>-->
    <!--<string name="btn_remove">Remove</string>-->
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_monitor">MONITOR</string>
</resources>
